--- a/params.yaml
+++ b/params.yaml
@@ -1,3 +1,5 @@
 data:
   raw_data: "C:/Users/Owner/OneDrive/Desktop/GitProject/End_to_End_Project/data/raw/airlines_flights_data.csv"
-  
+
+model: 
+  n_estimtors: 100
