Update params file for transform features

--- a/params.yaml
+++ b/params.yaml
@@ -4,3 +4,10 @@ data:
 
 model:
   n_estimators: 100
+  target: ["price"]
+
+
+features:
+  non_categorical_features: ['flight','duration','days_left','price','stops']
+  numerical_features: ['duration','days_left','stops']
+  
