--- a/params.yaml
+++ b/params.yaml
@@ -3,3 +3,8 @@ data:
 
 model:
   n_estimators: 100
+  target: ["price"]
+  
+features:
+  categorical_features: ['airline','source_city', 'departure_time','arrival_time', 'destination_city', 'class']
+  numerical_features: ['duration', 'days_left','stops']
