Update main.py and param.yaml & added tranform.py file

--- a/params.yaml
+++ b/params.yaml
@@ -10,4 +10,4 @@ model:
 features:
   non_categorical_features: ['flight','duration','days_left','price','stops']
   numerical_features: ['duration','days_left','stops']
-  
+  drop_column: ["flight","index"]
