--- a/params.yaml
+++ b/params.yaml
@@ -3,3 +3,11 @@ data:
 
 model:
   n_estimators: 100
+  target: 'price'
+
+
+features:
+  non_categorical_features: ['flight','duration','days_left','price','stops']
+  numerical_features: ['duration','days_left','stops']
+  categorical_features: ['airline","source_city","departure_time","arrival_time","destination_city","class']
+ 
