--- a/params.yaml
+++ b/params.yaml
@@ -11,3 +11,7 @@ features:
   non_categorical_features: ['flight','duration','days_left','price','stops']
   numerical_features: ['duration','days_left','stops']
   drop_column: ["flight","index"]
+
+
+test_size: 0.3
+random_state: 42
