--- a/params.yaml
+++ b/params.yaml
@@ -1,10 +1,11 @@
 data:
-  raw_data: "data\raw\airlines_flights_data.csv"
+  raw_data: "data/raw/airlines_flights_data.csv"
 
 model:
   n_estimators: 100
+  target : ['price']
 
 features:
-  non_categorical_features: ['flight']                # one-hot
-  numerical_features: ['duration', 'days_left', 'stops']
-  target: 'price'
+  non_categorical_features: ['duration','days_left','price','stops']
+  numerical_features: ['duration','days_left','stops']
+  drop_features: ['flight','index']
