CLEAN PIPELINE & DROP FEATURES

--- a/params.yaml
+++ b/params.yaml
@@ -4,8 +4,9 @@ data:
 model:
   n_estimators: 100
 
-target: "price"
+target: ["price"]
 
 features:
-  non_categorical_features: ["flight", "duration", "days_left", "price", "stops"]
+  non_categorical_features: ["duration", "days_left", "price", "stops"]
   numerical_features: ["duration", "days_left", "stops"]
+  drop_features: ["flight", "index"]
