--- a/params.yaml
+++ b/params.yaml
@@ -3,11 +3,9 @@ data:
 
 model:
   n_estimators: 100
-  target: 'price'
-
+  target: ["price"]
 
 features:
-  non_categorical_features: ['flight','duration','days_left','price','stops']
-  numerical_features: ['duration','days_left','stops']
-  categorical_features: ['airline","source_city","departure_time","arrival_time","destination_city","class']
- 
+  non_categorical_features: ["duration", "days_left", "price", "stops"]
+  numerical_features: ["duration", "days_left", "stops"]
+  drop_features: ["flight", "index"]
