--- a/mlruns/0/meta.yaml
+++ b/mlruns/0/meta.yaml
@@ -1,6 +1,8 @@
 artifact_location: mlflow-artifacts:/0
 creation_time: 1760417262026
 experiment_id: '0'
-last_update_time: 1760417262026
+last_update_time: 1760998124346
 lifecycle_stage: active
-name: Default
+name: Logistic Regression
+tags:
+  mlflow.experimentKind: custom_model_development
